crates/plotnik-tests/tests/02-parser/recovery_unexpected/predicate_parenthesized_no_cascade.txt
(call (#eq? @x "foo"))
------------------ DIAGNOSTICS -------------------
error: Tree-sitter predicates are not supported
 --> query.ptk:1:8
  |
1 | (call (#eq? @x "foo"))
  |        ^^^^
  |
help: move `== "foo"` into the node pattern captured as `@x`
